# bloCS

./: .gitignore  KeyHandler.py  LICENSE  README.md  ZIZI.py  affiche.py  affiche_grille.py  affiche_map.py  ajout_aleatoire.py  bloCS.spec  classegrille.py  classetuile.py  cw2048.spec  gauche.py  ghalitest.py  inputs.py  jeu.py  key_handler.py  lists_blocks  main.py  makefile  pyproject.toml  pyvenv.cfg  realmain.py  requirements.txt  rotation.py  setup.py  test_tkinter.py
2048/: makefile  requirements.txt  setup.py
bloCS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
classes/: class_background.py  class_block.py  class_client.py  class_entities.py  class_mob.py  class_player.py  class_server.py  class_tools.py  class_vivant.py  classegrille.py  classetuile.py  nv_classegrille.py  nv_classetuile.py
client/: .gitignore  main.py  resources.py
crea_map/: image_to_list.py
cw2048.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
game/: class_background.py  class_block.py  class_player.py  from_inventory_to_2048.py  lists_blocks  main.py  realmain.py  settings.py  support.py
input_handlers/: key_handler.py
screens/: loading_screen.py  menu.py
server/: main.py
testclassetuile/: ajout_aleatoire.py  classegrille.py  classetuile.py  gauche.py  jeu.py  key_handler.py  main.py
unused/: affiche_grille.py  exemple.py  main.py  test_tkinter.py  unittests.py
utils/: ajout_aleatoire.py  coord_to_screen.py  copie.py  creer_direction.py  gauche.py  house_blocks.py  house_list.py  jeu.py  key_handler.py  lists_blocks.py  parcours.py  parcours_liste_gauche.py  (+2 more)
(+40 files in other folders)
