[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloCS"
version = "2.0"
description = "A 2048 game implementation"

license = { text = "BSD" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pygame"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']